Fix spacing for Dohodnost

--- a/full-hd-styles.css
+++ b/full-hd-styles.css
@@ -2209,6 +2209,7 @@
         font-weight: 400;
         font-size: 1.04vw;
         line-height: 130%;
+        margin-bottom: 0.625vw;
     }
     
     section#main-page > header {
